free-games-claimer/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: free-games-claimer
  namespace: free-games-claimer
  labels:
    io.kompose.service: free-games-claimer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: free-games-claimer
  template:
    metadata:
      labels:
        io.kompose.service: free-games-claimer
    spec:
      volumes:
        - name: fgc
          persistentVolumeClaim:
            claimName: fgc
      containers:
        - name: fgc
          image: ghcr.io/vogler/free-games-claimer
          args:
            - bash
            - '-c'
            - node prime-gaming; node gog
          ports:
            - containerPort: 6080
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: fgc
              mountPath: /fgc/data
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
