free-games-claimer/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: free-games-claimer
  namespace: free-games-claimer
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`fgc.mizar.scalar.cloud`)
      middlewares:
        - name: home-networks
          namespace: default
      priority: 10
      services:
        - name: free-games-claimer
          kind: Service
          namespace: free-games-claimer
          port: http
  tls:
    secretName: free-games-claimer-tls
